完成html第二节说明

--- a/html/part2/创建地图.md
+++ b/html/part2/创建地图.md
@@ -110,8 +110,12 @@ map.reset()
  *  18. HTMLElement	返回地图的容器元素。当创建用户自定义控件时，需要自行实现
  */
 map.getContainer()
-
 ```
+
+好的，那么现在让我们用这些方法实战一下吧。
+
+> 本节我们将所有的css和js代码独立到文件，然后在页面引入
+> 详情参见代码
 
 
 
