--- a/html/part2/创建地图.md
+++ b/html/part2/创建地图.md
@@ -1,8 +1,8 @@
-## 创建地图 [未完成]
+## 创建地图 [未全部完成]
 
 上一节带大家完成了课程开始前的准备，并实现了一个最基本的DEMO，相信大家对地图已经有了一些初步的了解。这一节，我将为大家详细的解释上一节中的一些知识，认识BMap中的基本类。
 
-### Map类 - 详解
+### Map类 - 详解 [已完成]
 
 上一节说到，创建一个地图，我们必须使用Bmap中的Map类来创建
 
@@ -112,8 +112,7 @@ map.getContainer()
 > 本节我们将所有的css和js代码独立到文件，然后在页面引入
 > 详情参见代码
 
-
-
+### MapOptions类 - 详解 [未完成]
 
 
 
